--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwindcss": "^3.2.2",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
+    "vite-plugin-pwa": "^0.13.3",
     "vue-tsc": "^1.0.8"
   }
 }
