--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-i18n": "9",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-select": "4.0.0-beta.6"
   },
   "author": {
     "name": "Jhony Vega",
