--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "chance": "^1.1.9",
     "dayjs": "^1.11.6",
     "js-base64": "^3.7.2",
     "mdue": "^0.1.4",
@@ -31,6 +32,7 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/chance": "^1.1.3",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
